--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
+/*Main page styling*/
 form {
-    border: 4px solid #000000;
-
+    margin: 0 auto;
 }
 
-
-/*Main page styling*/
 fieldset {
     border: 1px solid #000000;
+    width: 33%;
+    display: inline;
+    box-sizing: border-box;
 }
 
 .shirt-front {
@@ -17,4 +18,17 @@ fieldset {
     z-index: 1;
 }
 
-.shirt-options
+.shirt-options {
+    border: 1px solid red;
+}
+
+.menu {
+    display: inline;
+}
+.shirt-name {
+  display: inline;
+}
+
+.shirt-price {
+  display: inline;
+}
