--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ form {
 }
 
 fieldset {
-    border: 1px solid #000000;
+    /*border: 1px solid #000000;*/
     width: 33%;
     display: inline-block;
     box-sizing: border-box;
@@ -28,6 +28,7 @@ fieldset {
 .shirt-options {
     border: 1px solid red;
     display: inline;
+    text-align: center;
 }
 
 .menu {
@@ -48,10 +49,12 @@ fieldset {
   display: inline;
   border: 1px solid blue;
   left: 0;
+  position: relative;
 }
 
 .shirt-price {
   display: inline;
   border: 1px solid purple;
   right: 0;
+  position: relative;
 }
