I added the font awesome icons to the menu bar. Next, I will add them under the pink and yellow shirts

--- a/style.css
+++ b/style.css
@@ -33,6 +33,9 @@ fieldset {
     border: 1px solid green;
 }
 
+.icon {
+    border: 1px solid #FFCCCC;
+}
 /*Styling for shirt name and shirt price*/
 .shirt-info {
   position: relative;
