--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 @import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css');
 
 body {
-    margin: 0 auto;
+    margin: 0;
 }
 
 form {
@@ -37,6 +37,7 @@ fieldset {
 .shirt-options {
     border: 1px solid red;
     text-align: center;
+    padding-left: 0;
     margin: 0 auto;
 }
 
