--- a/style.css
+++ b/style.css
@@ -49,9 +49,11 @@ article {
 nav {
   position: absolute;
   width: 100%;
+  border: 2px solid red;
+  box-sizing: border-box;
 }
 
-.shirt-options {
+ul {
     border: 2px solid #5CA4D7;
     text-align: center;
     padding-left: 0;
@@ -70,7 +72,9 @@ nav {
     color: #FFFFFF;
 }
 
-article ul
+.dropdown {
+  display: none;
+}
 
 ul li ul.dropdown {
     min-width: 100%;
