--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ form {
 }
 
 article {
-    border: 2px solid #000000;
+    /*border: 2px solid #000000;*/
     box-sizing: border-box;
     margin: 25px;
     position: relative;
@@ -26,6 +26,7 @@ article {
 /*picture styling*/
 .shirt-front, .shirt-back {
     width: 100%;
+    border:2px solid #000000;
 
 }
 
@@ -53,18 +54,30 @@ nav {
   box-sizing: border-box;
 }
 
+article ul {
+  padding: 0;
+  margin: 0;
+}
+
 ul {
     text-align: center;
     border-top: 2px solid black;
     border-bottom: 2px solid black;
     padding-left: 0;
-    margin: 0 auto;
+
+}
+
+article li {
+    float: left;
+    display: block;
+    width: 20%;
+    box-sizing: border-box;
+    position: relative;
 }
 
 .fa {
     max-width: 20%;
     color: #5CA4D7;
-    padding: .3em;
     border: 2px solid #5CA4D7;
 }
 
