--- a/style.css
+++ b/style.css
@@ -23,11 +23,14 @@ article {
   }
 }
 
+section {
+    border: 2px solid #5BA4D7;
+}
+
 /*picture styling*/
 .shirt-front, .shirt-back {
     width: 100%;
-    border:2px solid #000000;
-
+    box-sizing: border-box;
 }
 
 .shirt-back {
@@ -61,18 +64,16 @@ article ul {
 
 ul {
     text-align: center;
-    border-top: 2px solid black;
-    border-bottom: 2px solid black;
     padding-left: 0;
 
 }
 
 article li {
     float: left;
-    display: block;
     width: 20%;
     box-sizing: border-box;
     position: relative;
+    text-align: center;
 }
 
 .fa {
